[package]
name = "audioipc"
version = "0.2.5"
authors = [
        "Matthew Gregan <kinetik@flim.org>",
        "Dan Glastonbury <dan.glastonbury@gmail.com>"
        ]
license = "ISC"
description = "Remote Cubeb IPC"
edition = "2018"

[dependencies]
bincode = "1"
bytes = "0.4"
cubeb = "0.9"
log = "0.4"
serde = "1"
futures = "0.3"
serde_derive = "1"
tokio = { version = "1.0", features = ["rt", "sync", "net"] }
audio_thread_priority = "0.23.4"

[target.'cfg(unix)'.dependencies]
iovec = "0.1"
libc = "0.2"
mio = "0.6.19"
mio-uds = "0.6.7"
memmap = "0.7"

[target.'cfg(windows)'.dependencies]
mio = "0.6.19"
miow = "0.3.3"
mio-named-pipes = { git = "https://github.com/kinetiknz/mio-named-pipes", rev = "21c26326f5f45f415c49eac4ba5bc41a2f961321" }
winapi = { version = "0.3.6", features = ["combaseapi", "objbase"] }

[dependencies.error-chain]
version = "0.11.0"
default-features = false

[build-dependencies]
cc = "1.0"
