[package]
name = "audioipc"
version = "0.2.5"
authors = [
        "Matthew Gregan <kinetik@flim.org>",
        "Dan Glastonbury <dan.glastonbury@gmail.com>"
        ]
license = "ISC"
description = "Remote Cubeb IPC"
edition = "2018"

[dependencies]
bincode = "1.3"
bytes = "0.4" # XXX update to 1.0
cubeb = "0.9"
log = "0.4"
serde = "1"
serde_derive = "1"
mio = { version = "0.7",  features = ["os-poll", "net", "os-ext"] }
slab = "0.4"
scopeguard = "1.1.0"

[target.'cfg(unix)'.dependencies]
iovec = "0.1"
libc = "0.2"
memmap2 = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
audio_thread_priority = "0.23.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = ["combaseapi", "memoryapi", "objbase"] }

[target.'cfg(target_os = "android")'.dependencies]
ashmem = "0.1"

[dependencies.error-chain]
version = "0.11.0"
default-features = false

[build-dependencies]
cc = "1.0"
