[package]
name = "audioipc2"
version = "0.6.0"
authors = [
        "Matthew Gregan <kinetik@flim.org>",
        "Dan Glastonbury <dan.glastonbury@gmail.com>",
]
license = "ISC"
description = "Remote Cubeb IPC"
edition = "2018"

[dependencies]
bincode = "1.3"
byteorder = "1"
bytes = "1"
cubeb = "0.30.1"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_bytes = "0.11"
mio = { version = "1", features = ["os-poll", "net", "os-ext"] }
slab = "0.4"
scopeguard = "1.1.0"
crossbeam-queue = "0.3"

[target.'cfg(unix)'.dependencies]
iovec = "0.1"
libc = "0.2"
memmap2 = "0.9"
arrayvec = "0.7"

[target.'cfg(target_os = "linux")'.dependencies.audio_thread_priority]
version = "0.34"
default-features = false

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
        "Win32_Foundation",
        "Win32_Security",
        "Win32_Storage_FileSystem",
        "Win32_System_Com",
        "Win32_System_Memory",
        "Win32_System_Threading",
] }

[target.'cfg(target_os = "android")'.dependencies]
ashmem = "0.1.2"


[build-dependencies]
cc = "1.0"

[dev-dependencies]
env_logger = "0.9"
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "serialization"
harness = false
