[package]
name = "audioipc2-client"
version = "0.6.0"
authors = [
        "Matthew Gregan <kinetik@flim.org>",
        "Dan Glastonbury <dan.glastonbury@gmail.com>",
]
license = "ISC"
description = "Cubeb Backend for talking to remote cubeb server."
edition = "2018"

[dependencies]
audioipc = { package = "audioipc2", path = "../audioipc" }
cubeb-backend = "0.30.1"
log = "0.4"
audio_thread_priority = { version = "0.34", default-features = false }
