[package]
name = "ipctest"
version = "0.1.0"
authors = ["Dan Glastonbury <dan.glastonbury@gmail.com>"]

[dependencies]
audioipc = { path = "../audioipc" }
audioipc-server = { path = "../server" }
audioipc-client= { path = "../client" }
cubeb = "0.5.5"
env_logger = "0.4.3"
error-chain = "0.11.0"
log = "0.3.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.6"
