[package]
name = "ipctest"
version = "0.5.0"
authors = ["Dan Glastonbury <dan.glastonbury@gmail.com>"]
license = "ISC"
edition = "2018"

[dependencies]
audioipc = { path = "../audioipc" }
audioipc-client= { path = "../client" }
audioipc-server = { path = "../server" }
cubeb = "0.9.0"
env_logger = "0.9"
error-chain = "0.11.0"
log = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"
