[package]
name = "audioipc-server"
version = "0.1.0"
authors = ["Dan Glastonbury <dan.glastonbury@gmail.com>"]
description = "Remote cubeb server"

[dependencies]
audioipc = { path = "../audioipc" }
cubeb-core = { git = "https://github.com/djg/cubeb-rs", version="^0.1" }
cubeb = { git = "https://github.com/djg/cubeb-rs", version="^0.3" }
bytes = "0.4"
error-chain = "0.10.0"
lazycell = "^0.4"
log = "^0.3.6"
mio = "0.6.7"
mio-uds = "0.6.4"
slab = "0.3.0"

