[package]
name = "audioipc-server"
version = "0.1.0"
authors = ["Dan Glastonbury <dan.glastonbury@gmail.com>"]
description = "Remote cubeb server"

[dependencies]
audioipc = { path = "../audioipc" }
cubeb-core = { git = "https://github.com/djg/cubeb-rs", version="^0.1" }
cubeb = { git = "https://github.com/djg/cubeb-rs", version="^0.3.1" }
bytes = "0.4"
lazycell = "^0.4"
libc = "0.2"
log = "^0.3.6"
slab = "0.3.0"
# rayon-core in Gecko uses futures 0.1.13
futures = "=0.1.13"
tokio-core = "0.1"
tokio-uds = "0.1.7"

[dependencies.error-chain]
version = "0.11.0"
default-features = false