[package]
name = "audioipc2-server"
version = "0.6.0"
authors = [
        "Matthew Gregan <kinetik@flim.org>",
        "Dan Glastonbury <dan.glastonbury@gmail.com>",
]
license = "ISC"
description = "Remote cubeb server"
edition = "2018"

[dependencies]
audioipc = { package = "audioipc2", path = "../audioipc" }
cubeb-core = "0.30.1"
once_cell = "1.2.0"
log = "0.4"
slab = "0.4"
audio_thread_priority = { version = "0.34", default-features = false }

